fix broken style

--- a/src/assets/scss/_pagination.scss
+++ b/src/assets/scss/_pagination.scss
@@ -30,16 +30,14 @@
     margin-left: 0;
   }
 }
-
+.custom-pagination {
+  text-align: center;
+}
 .pagination {
   margin: 0;
   border-radius: 0;
   min-width: 55px;
   text-align: center;
-  &.custom-pagination {
-    min-width: 100%;
-    margin-top: 25px;
-  }  
 }
 
 .pagination-item {
